--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -18,7 +18,7 @@ block main
   // abbreviation "i-page" means "index-page"
   .i-page__wrapper
     h1.i-page__title We are UniPro
-    header.i-page__header
+    .i-page__header
       +header()
     main.i-page__content
       .i-page__content-top
@@ -27,5 +27,5 @@ block main
         +content-bottom()
       .i-page__form
         +form()
-    footer.i-page__footer
+    .i-page__footer
       +footer()
