--- a/src/components/info-section/info-section.scss
+++ b/src/components/info-section/info-section.scss
@@ -18,6 +18,7 @@
   }
 
   @media (min-width: 960px) {
+    cursor: default;
     padding-left: 13px;
     padding-top: 52px;
 
@@ -87,8 +88,9 @@
     @media (min-width: 960px) {
       & {
         background: $section-bg-primary;
+        padding-left: 13px;
+        padding-top: 52px;
       }
-
 
       #{$r}__title {
         font-weight: 400;
@@ -96,7 +98,6 @@
         padding: 0;
         margin: 0;
       }
-
 
       #{$r}__img,
       #{$r}__news {
